--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <title>Tetris</title>
     <meta charset="utf-8" />
+    <style>
+        html, body {margin:0; padding:0}
+        #game {border:1px solid black};
+    </style>
 </head>
 <body>
-    <canvas id="game" width="100" height="100" />
+    <canvas id="game" width="600" height="600" />
     <script data-main="js/main.js" src="js/require.js"></script>
 </body>
 </html>
