--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta charset="utf-8" />
     <style>
         html, body {margin:0; padding:0}
-        #game {border:1px solid black};
+        #game {
+            margin: 150px auto;
+            display:block;
+        }
+        body {
+            width:100%;
+            height: 100%;
+            background-image: url(img/background.png);
+        }
     </style>
 </head>
 <body>
