update game title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tetris</title>
+    <title>Krzysztof Kolumn w krainie Syren</title>
     <meta charset="utf-8" />
     <style>
         html, body {margin:0; padding:0}
