--- a/index.html
+++ b/index.html
@@ -2,22 +2,16 @@
 <html>
 <head>
     <title>Krzysztof Kolumn w krainie Syren</title>
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8" />
     <style>
         html, body {margin:0; padding:0}
-        #game {
-            margin: 150px auto;
-            display:block;
-        }
         body {
-            width:100%;
-            height: 100%;
             background-image: url(img/background.png);
         }
     </style>
 </head>
 <body>
-    <canvas id="game" width="400" height="400" />
     <script data-main="js/main.js" src="js/require.js"></script>
 </body>
 </html>
