--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Krzysztof Kolumn w krainie Syren</title>
+    <title>The game</title>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8" />
     <style>
         html, body {margin:0; padding:0}
         body {
-            background-image: url(img/background.png);
+            background: #F46A6A url(./assets/background.png) no-repeat;
+        }
+        #board {
+            position: absolute;
+            top: 300px;
+            left: 400px;
         }
     </style>
 </head>
