--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <style>
         html, body {margin:0; padding:0}
         body {
-            background: #fff url(./assets/background.png) no-repeat;
+            background: #fff url(./assets/background.gif) 50% -300px repeat-x;
         }
         #board {
             position: absolute;
-            top: 100px;
-            left: 320px;
+            top: 200px;
+            left: 50%;
+            margin-left:-300px;
             z-index:9999;
         }
         .reindeer {
@@ -22,22 +23,42 @@
             height: 382px;
             -webkit-transform: scale(0.5);
         }
+        .shadow {
+            position: absolute;
+            background: transparent url(./assets/shadow.png) 50% 50% no-repeat;
+            width: 1400px;
+            height: 70px;
+            -webkit-transform: scale(0.4);
+            top:800px;
+            left:50%;
+            margin-left:-700px;
+        }
+        .drunker {
+            position:absolute;
+            background: transparent url(./assets/drunk-claus.gif) no-repeat;
+            width:354px;
+            height:363px;
+            top: 450px;
+            left: 20px;
+        }
         .r1 {
-            top: 700px;
+            top: 750px;
             left: 350px;
         }
         .r2 {
-            top: 700px;
+            top: 750px;
             left: 650px;
         }
         .r3 {
-            top: 700px;
+            top: 750px;
             left: 850px;
         }
     </style>
 </head>
 <body>
     <script data-main="js/main.js" src="js/require.js"></script>
+    <div class="drunker"></div>
+    <div class="shadow"></div>
     <div class="reindeer r1"></div>
     <div class="reindeer r2"></div>
     <div class="reindeer r3"></div>
