--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         }
         #board {
             position: absolute;
-            top: 100px;
+            top: 120px;
             left: 50%;
             margin-left:-300px;
             z-index:9999;
+            /* border:1px solid silver; */
         }
         .reindeer {
             position: absolute;
@@ -29,7 +30,7 @@
             width: 1400px;
             height: 70px;
             -webkit-transform: scale(0.4);
-            top:700px;
+            top:750px;
             left:50%;
             margin-left:-700px;
         }
