--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>The game</title>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8" />
-    <link href="./assets/main.css" rel="stylesheet" media="screen">
+    <link href="assets/main.css" rel="stylesheet" media="screen">
 </head>
 <body>
     <script data-main="js/main.js" src="js/require.js"></script>
