--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>The game</title>
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-    <meta charset="utf-8" />
-    <link href="assets/main.css" rel="stylesheet" media="screen">
-</head>
-<body>
-    <script data-main="js/main.js" src="js/require.js"></script>
-    <div id="santa" class="santa"></div>
-    <div class="shadow"></div>
-    <div class="text"></div>
-    <div class="reindeer r1"></div>
-    <div class="reindeer r2"></div>
-    <div class="reindeer r3"></div>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><title>The game in jade</title><base href="http://widmogrod.github.io/js-game-snake/"><meta><meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"><link href="assets/main.css" rel="stylesheet" media="screen"></head><body><script data-main="js/main.js" src="js/require.js"></script><div id="santa" class="santa"></div><div class="shadow"></div><div class="text"></div><div class="reindeer r1"></div><div class="reindeer r2"></div><div class="reindeer r3"></div></body></html>
